--- a/src/index.html
+++ b/src/index.html
@@ -16,12 +16,15 @@
 </head>
 
 <body>
-    <div id="container">
-        <div id="mapContainer">MAPA
+    <div class="container">
+        <div id="map">
+            <div id="mapContainer">
+                <h1>MAPA</h1>
+            </div>
         </div>
-        <div>
-            <input type="text" id="text">
-            <output id="textOne"></output>
+        <div id="texts">
+            <input type="text" id="text"></input>
+            <input id="textOne"></input>
         </div>
     </div>
     <script src="map.js"></script>
